--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ rust:
 matrix:
   allow_failure:
     - rust: nightly
+
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libasound2-dev
