--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ matrix:
   allow_failure:
     - rust: nightly
 
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libasound2-dev
+sudo: false
+addons:
+  apt:
+    packages:
+      - libasound2-dev
